fit: рефакторинг асинхронного логирования времени выполнения методов, добавление асинхронных эндпойнтов в сервис AOP